--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
     </div>
 </header>
-<section class="about">
+<section class="about" id="about">
     <div class="container px-4 px-lg-5 h-100">
         <div class="row h-100 align-content-center justify-content-center text-center">
             <div class="col-lg-8">
@@ -127,7 +127,7 @@
     </div>
 </section>
 
-<section class="service" id="Service">
+<section class="service" id="service">
     <div class="container px-4 px-lg-5 h-100">
 
 
