--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                         <i class="fa-solid fa-arrow-left-long "></i>
                         <span href="#"> Overview Page</span>
                     </a>
-                    </a>
                 </div>
                 <div class="col col-auto justify-content-cente d-none d-xl-block ">
                     <button class="icon-btn mx-2">
@@ -62,10 +61,11 @@
 <nav class="navbar fixed-top navbar-expand-lg py-3" id="navbar">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="#">Start Bootstrap</a>
-
         <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
             data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-expanded="false"
-            aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
         <div class="collapse navbar-collapse" id="offcanvasNavbar">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -86,9 +86,6 @@
     </div>
 </nav>
 
-
-
-
 <header class="masthead " id="masthead">
     <div class="container px-4 px-lg-5 h-100">
         <div class="row h-100 align-content-center justify-content-center text-center">
@@ -96,7 +93,6 @@
                 <h1 class="text-white fs-1 fw-bold">Your Favorite Place for Free Bootstrap Themes</h1>
                 <hr />
             </div>
-
             <div class="col-lg-8">
                 <p class="mb-5 fs-5 fw-bold">Start Bootstrap can help you build better websites using the Bootstrap
                     framework! Just download a
@@ -104,7 +100,6 @@
                     and start customizing, no strings attached!</p>
                 <a class="btn masthead-btn fw-bold text-uppercase text-white" href="#about">FIND OUT MORE</a>
             </div>
-
         </div>
     </div>
 </header>
@@ -119,21 +114,16 @@
                 <p class="text-white mb-5">Start Bootstrap has everything you need to get your new website up and
                     running in no time! Choose one of
                     our open source, free to download, and easy to use themes! No strings attached!</p>
-                <a class="btn about-btn  fw-bold text-uppercase" href="#Service">GET STARTED</a>
+                <a class="btn about-btn  fw-bold text-uppercase" href="#service">GET STARTED</a>
             </div>
         </div>
-    </div>
-    </div>
     </div>
 </section>
 
 <section class="service" id="service">
     <div class="container px-4 px-lg-5 h-100">
-
-
         <h1 class="text-center ">At Your Service</h1>
         <hr>
-
         <div class="row py-5 align-content-center  text-center">
             <div class="col-lg-3 col-md-6">
                 <i class="fa-solid fs-1 fa-gem"></i>
@@ -160,42 +150,32 @@
             </div>
         </div>
     </div>
-    </div>
 </section>
 
 <section class="portfolio" id="portfolio">
     <div class="container-fluid p-0 ">
         <div class="row g-0">
-
-
             <div class="col-lg-4 col-sm-6 ">
-
                 <a class="portfolio_image" href="./image/1.jpg">
                     <img class="card_image img-fluid" src="./image/1.jpg" alt="">
-
                     <div class="portfolio_title justify-content-center align-content-center text-center">
                         <div class="portfolio_category fs-6">Category</div>
                         <div class="portfolio_name text-white fs-4">Project Name</div>
                     </div>
                 </a>
-
             </div>
 
             <div class="col-lg-4 col-sm-6 ">
-
                 <a class="portfolio_image" href="./image/2.jpg">
                     <img class="card_image img-fluid" src="./image/2.jpg" alt="">
-
                     <div class="portfolio_title justify-content-center align-content-center text-center">
                         <div class="portfolio_category fs-6">Category</div>
                         <div class="portfolio_name text-white fs-4">Project Name</div>
                     </div>
                 </a>
-
             </div>
 
             <div class="col-lg-4 col-sm-6 ">
-
                 <a class="portfolio_image" href="./image/3.jpg">
                     <img class="card_image img-fluid" src="./image/3.jpg" alt="">
                     <div class="portfolio_title justify-content-center align-content-center text-center">
@@ -203,11 +183,9 @@
                         <div class="portfolio_name text-white fs-4 ">Project Name</div>
                     </div>
                 </a>
-
             </div>
 
             <div class="col-lg-4 col-sm-6 ">
-
                 <a class="portfolio_image" href="./image/4.jpg">
                     <img class="card_image img-fluid" src="./image/4.jpg" alt="">
                     <div class="portfolio_title justify-content-center align-content-center text-center">
@@ -215,24 +193,19 @@
                         <div class="portfolio_name text-white fs-4">Project Name</div>
                     </div>
                 </a>
-
             </div>
 
             <div class="col-lg-4 col-sm-6 ">
-
                 <a class="portfolio_image" href="./image/5.jpg">
                     <img class="card_image img-fluid" src="./image/5.jpg" alt="">
                     <div class="portfolio_title justify-content-center align-content-center text-center">
                         <div class="portfolio_category fs-6">Category</div>
                         <div class="portfolio_name text-white fs-4">Project Name</div>
                     </div>
-
                 </a>
-
             </div>
 
             <div class="col-lg-4 col-sm-6 ">
-
                 <a class="portfolio_image" href="./image/6.jpg">
                     <img class="card_image img-fluid" src="./image/6.jpg" alt="">
                     <div class="portfolio_title justify-content-center align-content-center text-center">
@@ -240,7 +213,6 @@
                         <div class="portfolio_name text-white fs-4">Project Name</div>
                     </div>
                 </a>
-
             </div>
         </div>
     </div>
@@ -294,9 +266,7 @@
                     <i class="fa-solid fs-2 m-3 fa-mobile-screen-button"></i>
                     <p>+1 (555) 123-4567</p>
                 </div>
-
             </div>
-
         </div>
 </section>
 <footer class="bg-light py-5">
@@ -305,11 +275,8 @@
     </div>
 </footer>
 </body>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous">
-</script>
-
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
 
 </html>
